// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExercisePreview using step data matches snapshot with overlay and correctness 1`] = `
.c6 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c6 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c6 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c8 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
  border-top: 1px solid #d5d5d5;
}

.c5 .exercise-context .os-title {
  margin: 0 0 var(--spacing,0.8rem);
}

.c5 .exercise-context .os-subtitle {
  margin: var(--spacing,0.8rem) 0;
}

.c5 .exercise-context figure {
  float: left;
  margin: 0;
}

.c5 .exercise-context img {
  max-width: 16rem;
}

.c5 .exercise-context p:last-child {
  margin-bottom: 0;
}

.c5 .question-info,
.c5 .exercise-context {
  line-height: 2rem;
}

.c7 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
}

.c7.exercise-stimulus {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  --step-card-gutter: 14rem;
  --step-card-gutter-top: 4.8rem;
  --step-card-gutter-bottom: 2rem;
  --step-card-surface: #fdfdfd;
  font-size: calc(1.8rem * var(--content-text-scale,1));
  line-height: calc(2.8rem * var(--content-text-scale,1));
  color: #424242;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0 auto 5rem auto;
  border: 0.1rem solid #d5d5d5;
  border-radius: 0.25rem;
  background-color: white;
  overflow: hidden;
}

.c1.c1 {
  --spacing: 0.8rem;
  --step-card-gutter: var(--spacing);
  --step-card-gutter-top: var(--spacing);
  --step-card-gutter-bottom: var(--spacing);
  --step-card-surface: #ffffff;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c0 {
  padding: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.6rem 2.4rem;
  background: #daf3f8;
  font-size: 1.8rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.72px;
  -moz-letter-spacing: -0.72px;
  -ms-letter-spacing: -0.72px;
  letter-spacing: -0.72px;
}

.c3 h2.question-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-size: inherit;
  margin: inherit;
  text-transform: uppercase;
}

.c3 h2.question-info .question-id {
  font-weight: normal;
}

.c3 h2.question-info .ox-icon-lock {
  margin-right: 1rem;
}

.c3 .num-questions,
.c3 .points {
  display: none;
}

.c3 .exercise-id,
.c3 .separator {
  font-weight: normal;
}

.c3 .separator {
  margin: 0 0.4rem;
}

.c3 .exercise-id {
  height: 28px;
}

.c3 button {
  color: #5e5e5e;
}

.c3 .scoring {
  margin-left: auto;
  margin-right: 1rem;
}

.c3 .scoring span {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.c3 .openstax-exercise-badges {
  margin: 0;
  line-height: 2rem;
}

.c3 .openstax-exercise-badges svg {
  display: block;
}

.c3 .openstax-exercise-badges svg:not(.interactive) {
  margin: 0 0 0 6px !important;
}

.c3.c3 {
  background-color: #ffffff;
  padding: var(--spacing,0.8rem);
  font-size: 1.6rem;
  line-height: 2rem;
}

.c3 h2.question-info {
  font-weight: bold;
  font-size: 1.2rem;
  line-height: 2rem;
}

.c3 .question-id {
  font-weight: 400;
  font-size: 1.2rem;
}

.c4.c4.c4 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

.c11 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c10 {
  width: 100%;
}

.c9.openstax-question img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.c9.openstax-question .question-stem {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table {
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
}

.c9.openstax-question .instructions {
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 10px;
  color: #818181;
  margin: 0;
}

.c9.openstax-question .instructions i {
  margin-left: 5px;
}

.c9.openstax-question .instructions .text-info {
  color: #0dc0dc;
  padding-left: 5px;
  cursor: pointer;
  font-style: normal;
}

.c9.openstax-question .multiple-choice-prompt {
  font-weight: 600;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer {
  width: initial;
  color: #424242;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer.answer-selected {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-label {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-letter-wrapper::before {
  width: 3.6rem;
  height: 3.6rem;
  min-width: 3.6rem;
  min-height: 3.6rem;
  border-radius: calc(3.6rem / 2);
  border-width: 2px;
  border-style: solid;
  border-color: #c6c6c6;
  color: #6f6f6f;
  -webkit-transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  background-color: #ffffff;
  font-family: "Neue Helvetica W01",Helvetica,Arial,sans-serif;
  box-sizing: border-box;
  font-weight: normal;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 1rem;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer * {
  margin: 0;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-letter-wrapper::before {
  content: attr(data-answer-choice);
  text-align: center;
  padding: 0;
  font-size: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0 0;
  margin: 0;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label {
  cursor: pointer;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover .answer-letter-wrapper::before {
  color: #026AA1;
  border-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:focus-visible + .answer-label .answer-letter-wrapper::before {
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  outline-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected:not(.answer-correct) .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected.answer-correct .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #0D7741;
  background-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-correct:not(.answer-selected) .answer-label .answer-letter-wrapper::before {
  color: #0D7741;
  border-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label:hover .answer-letter-wrapper::before {
  color: #C22032;
  border-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect.answer-selected.answer-incorrect .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback {
  font-family: "Neue Helvetica W01",Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-style: normal;
  font-weight: 400;
  line-height: 1.6;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  z-index: 1;
  position: relative;
  border: 1px solid rgba(0,0,0,0.2);
  background-color: #ffffff;
  background-clip: padding-box;
  max-width: 325px;
  margin: calc(8px - 14px) 0 1rem 8px;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  color: #6f6f6f;
  font-size: calc(1.4rem * var(--content-text-scale,1));
  max-width: 370px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow {
  position: absolute;
  display: block;
  width: 16px;
  height: 8px;
  margin-left: 9px;
  top: calc(8px * -1);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before,
.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
  border-width: 0 calc(16px / 2) 8px calc(16px / 2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before {
  top: 0;
  border-bottom-color: rgba(0,0,0,0.2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  top: 1px;
  border-bottom-color: #ffffff;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right {
  right: calc(-9px - 1px);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right .arrow {
  right: 9px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback > .content {
  padding: 1rem 0.8rem;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .question-feedback-content {
  padding: 0.9rem 1.1rem;
}

.c9.openstax-question .openstax-answer {
  border-top: 1px solid #d5d5d5;
  margin: 10px 0;
  padding: 6px 8px;
}

.c9.openstax-question .answers-table > :last-child,
.c9.openstax-question .answers-table > :last-child > .question-feedback,
.c9.openstax-question .answers-table > .openstax-answer:has(+ .question-feedback-live-region:last-child:empty) {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table + * {
  margin-top: 20px;
}

.c9.c9.c9.openstax-question .answers-table + * {
  margin-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .question-stem {
  color: #424242;
  font-weight: bold;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback-content {
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback {
  max-width: unset;
}

.c9.c9.c9.openstax-question .openstax-answer {
  padding: 0;
  border: none;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-label {
  padding-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper .answer-answer {
  margin-left: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper::before {
  min-width: 2.3rem;
  min-height: 2.3rem;
  width: 2.3rem;
  height: 2.3rem;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter {
  min-width: 2.8rem;
  min-height: 2.8rem;
  width: 2.8rem;
  height: 2.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: 0 auto auto auto !important;
}

.c2 .step-card-footer {
  display: none;
}

.c2 .answer-answer {
  font-weight: normal;
}

.c2.is-selected {
  background-color: #daf3f8;
  border-width: 0.2rem;
}

.c2.is-selected .step-card-footer,
.c2.is-selected .step-card-body,
.c2.is-selected .step-card-header {
  background-color: #daf3f8 !important;
}

.c2.is-selected .step-card-question {
  border-top-width: 0.2rem;
}

@media (max-width:999px) {
  .c1 {
    --step-card-gutter: 24px;
    --step-card-gutter-top: 24px;
  }
}

@media (max-width:600px) {
  .c1 {
    --step-card-gutter: 8px;
    --step-card-gutter-top: calc(8px * 2);
  }
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:1000px) {
  .c3 button.ox-icon-angle-left,
  .c3 button.ox-icon-angle-right {
    display: none;
  }
}

@media (max-width:999px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2.5rem;
  }

  .c3 svg.ox-icon {
    display: inherit;
    margin: 0;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 24px;
  }

  .c3 button.ox-icon-angle-right {
    margin-left: 24px;
  }

  .c3 .openstax-exercise-badges svg {
    display: none;
  }

  .c3 .num-questions,
  .c3 points {
    display: inherit;
  }

  .c3 .exercise-id {
    display: none;
  }

  .c3 button[class^='ox-icon-angle']:hover {
    box-shadow: none;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
    padding: 10px 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c4.c4 .question-feedback {
    margin-left: 0;
  }

  .c4.c4 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (max-width:600px) {
  .c4 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className=""
>
  <div
    className="c0 step-card-outer"
    data-task-step-id="0"
  >
    <div
      className="c1 exercise-step c2 preview-card is-selected"
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          className="step-card"
        >
          <div
            className="c3 step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <div
                className="c6 c7 step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="c6 c7 step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="c8 step-card-question step-card-body"
                >
                  <div
                    className="c9 openstax-question has-correct-answer"
                    data-question-number={1}
                    data-test-id="question"
                  >
                    <div
                      className="c10"
                    >
                      <div>
                        <div
                          className="answers-table"
                        >
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled answer-correct"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-0"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-0"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="A"
                                  data-test-id="answer-choice-A"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice A:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "True",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-1"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-1"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="B"
                                  data-test-id="answer-choice-B"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice B:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "False",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot with overlay and selected false 1`] = `
.c6 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c6 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c6 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c8 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
  border-top: 1px solid #d5d5d5;
}

.c5 .exercise-context .os-title {
  margin: 0 0 var(--spacing,0.8rem);
}

.c5 .exercise-context .os-subtitle {
  margin: var(--spacing,0.8rem) 0;
}

.c5 .exercise-context figure {
  float: left;
  margin: 0;
}

.c5 .exercise-context img {
  max-width: 16rem;
}

.c5 .exercise-context p:last-child {
  margin-bottom: 0;
}

.c5 .question-info,
.c5 .exercise-context {
  line-height: 2rem;
}

.c7 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
}

.c7.exercise-stimulus {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  --step-card-gutter: 14rem;
  --step-card-gutter-top: 4.8rem;
  --step-card-gutter-bottom: 2rem;
  --step-card-surface: #fdfdfd;
  font-size: calc(1.8rem * var(--content-text-scale,1));
  line-height: calc(2.8rem * var(--content-text-scale,1));
  color: #424242;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0 auto 5rem auto;
  border: 0.1rem solid #d5d5d5;
  border-radius: 0.25rem;
  background-color: white;
  overflow: hidden;
}

.c1.c1 {
  --spacing: 0.8rem;
  --step-card-gutter: var(--spacing);
  --step-card-gutter-top: var(--spacing);
  --step-card-gutter-bottom: var(--spacing);
  --step-card-surface: #ffffff;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c0 {
  padding: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.6rem 2.4rem;
  background: #daf3f8;
  font-size: 1.8rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.72px;
  -moz-letter-spacing: -0.72px;
  -ms-letter-spacing: -0.72px;
  letter-spacing: -0.72px;
}

.c3 h2.question-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-size: inherit;
  margin: inherit;
  text-transform: uppercase;
}

.c3 h2.question-info .question-id {
  font-weight: normal;
}

.c3 h2.question-info .ox-icon-lock {
  margin-right: 1rem;
}

.c3 .num-questions,
.c3 .points {
  display: none;
}

.c3 .exercise-id,
.c3 .separator {
  font-weight: normal;
}

.c3 .separator {
  margin: 0 0.4rem;
}

.c3 .exercise-id {
  height: 28px;
}

.c3 button {
  color: #5e5e5e;
}

.c3 .scoring {
  margin-left: auto;
  margin-right: 1rem;
}

.c3 .scoring span {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.c3 .openstax-exercise-badges {
  margin: 0;
  line-height: 2rem;
}

.c3 .openstax-exercise-badges svg {
  display: block;
}

.c3 .openstax-exercise-badges svg:not(.interactive) {
  margin: 0 0 0 6px !important;
}

.c3.c3 {
  background-color: #ffffff;
  padding: var(--spacing,0.8rem);
  font-size: 1.6rem;
  line-height: 2rem;
}

.c3 h2.question-info {
  font-weight: bold;
  font-size: 1.2rem;
  line-height: 2rem;
}

.c3 .question-id {
  font-weight: 400;
  font-size: 1.2rem;
}

.c4.c4.c4 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

.c11 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c10 {
  width: 100%;
}

.c9.openstax-question img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.c9.openstax-question .question-stem {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table {
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
}

.c9.openstax-question .instructions {
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 10px;
  color: #818181;
  margin: 0;
}

.c9.openstax-question .instructions i {
  margin-left: 5px;
}

.c9.openstax-question .instructions .text-info {
  color: #0dc0dc;
  padding-left: 5px;
  cursor: pointer;
  font-style: normal;
}

.c9.openstax-question .multiple-choice-prompt {
  font-weight: 600;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer {
  width: initial;
  color: #424242;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer.answer-selected {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-label {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-letter-wrapper::before {
  width: 3.6rem;
  height: 3.6rem;
  min-width: 3.6rem;
  min-height: 3.6rem;
  border-radius: calc(3.6rem / 2);
  border-width: 2px;
  border-style: solid;
  border-color: #c6c6c6;
  color: #6f6f6f;
  -webkit-transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  background-color: #ffffff;
  font-family: "Neue Helvetica W01",Helvetica,Arial,sans-serif;
  box-sizing: border-box;
  font-weight: normal;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 1rem;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer * {
  margin: 0;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-letter-wrapper::before {
  content: attr(data-answer-choice);
  text-align: center;
  padding: 0;
  font-size: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0 0;
  margin: 0;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label {
  cursor: pointer;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover .answer-letter-wrapper::before {
  color: #026AA1;
  border-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:focus-visible + .answer-label .answer-letter-wrapper::before {
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  outline-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected:not(.answer-correct) .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected.answer-correct .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #0D7741;
  background-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-correct:not(.answer-selected) .answer-label .answer-letter-wrapper::before {
  color: #0D7741;
  border-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label:hover .answer-letter-wrapper::before {
  color: #C22032;
  border-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect.answer-selected.answer-incorrect .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback {
  font-family: "Neue Helvetica W01",Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-style: normal;
  font-weight: 400;
  line-height: 1.6;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  z-index: 1;
  position: relative;
  border: 1px solid rgba(0,0,0,0.2);
  background-color: #ffffff;
  background-clip: padding-box;
  max-width: 325px;
  margin: calc(8px - 14px) 0 1rem 8px;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  color: #6f6f6f;
  font-size: calc(1.4rem * var(--content-text-scale,1));
  max-width: 370px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow {
  position: absolute;
  display: block;
  width: 16px;
  height: 8px;
  margin-left: 9px;
  top: calc(8px * -1);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before,
.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
  border-width: 0 calc(16px / 2) 8px calc(16px / 2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before {
  top: 0;
  border-bottom-color: rgba(0,0,0,0.2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  top: 1px;
  border-bottom-color: #ffffff;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right {
  right: calc(-9px - 1px);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right .arrow {
  right: 9px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback > .content {
  padding: 1rem 0.8rem;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .question-feedback-content {
  padding: 0.9rem 1.1rem;
}

.c9.openstax-question .openstax-answer {
  border-top: 1px solid #d5d5d5;
  margin: 10px 0;
  padding: 6px 8px;
}

.c9.openstax-question .answers-table > :last-child,
.c9.openstax-question .answers-table > :last-child > .question-feedback,
.c9.openstax-question .answers-table > .openstax-answer:has(+ .question-feedback-live-region:last-child:empty) {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table + * {
  margin-top: 20px;
}

.c9.c9.c9.openstax-question .answers-table + * {
  margin-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .question-stem {
  color: #424242;
  font-weight: bold;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback-content {
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback {
  max-width: unset;
}

.c9.c9.c9.openstax-question .openstax-answer {
  padding: 0;
  border: none;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-label {
  padding-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper .answer-answer {
  margin-left: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper::before {
  min-width: 2.3rem;
  min-height: 2.3rem;
  width: 2.3rem;
  height: 2.3rem;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter {
  min-width: 2.8rem;
  min-height: 2.8rem;
  width: 2.8rem;
  height: 2.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: 0 auto auto auto !important;
}

.c2 .step-card-footer {
  display: none;
}

.c2 .answer-answer {
  font-weight: normal;
}

.c2.is-selected {
  background-color: #daf3f8;
  border-width: 0.2rem;
}

.c2.is-selected .step-card-footer,
.c2.is-selected .step-card-body,
.c2.is-selected .step-card-header {
  background-color: #daf3f8 !important;
}

.c2.is-selected .step-card-question {
  border-top-width: 0.2rem;
}

@media (max-width:999px) {
  .c1 {
    --step-card-gutter: 24px;
    --step-card-gutter-top: 24px;
  }
}

@media (max-width:600px) {
  .c1 {
    --step-card-gutter: 8px;
    --step-card-gutter-top: calc(8px * 2);
  }
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:1000px) {
  .c3 button.ox-icon-angle-left,
  .c3 button.ox-icon-angle-right {
    display: none;
  }
}

@media (max-width:999px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2.5rem;
  }

  .c3 svg.ox-icon {
    display: inherit;
    margin: 0;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 24px;
  }

  .c3 button.ox-icon-angle-right {
    margin-left: 24px;
  }

  .c3 .openstax-exercise-badges svg {
    display: none;
  }

  .c3 .num-questions,
  .c3 points {
    display: inherit;
  }

  .c3 .exercise-id {
    display: none;
  }

  .c3 button[class^='ox-icon-angle']:hover {
    box-shadow: none;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
    padding: 10px 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c4.c4 .question-feedback {
    margin-left: 0;
  }

  .c4.c4 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (max-width:600px) {
  .c4 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className=""
>
  <div
    className="c0 step-card-outer"
    data-task-step-id="0"
  >
    <div
      className="c1 exercise-step c2 preview-card "
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          className="step-card"
        >
          <div
            className="c3 step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <div
                className="c6 c7 step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="c6 c7 step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="c8 step-card-question step-card-body"
                >
                  <div
                    className="c9 openstax-question"
                    data-question-number={1}
                    data-test-id="question"
                  >
                    <div
                      className="c10"
                    >
                      <div>
                        <div
                          className="answers-table"
                        >
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-0"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-0"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="A"
                                  data-test-id="answer-choice-A"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice A:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "True",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-1"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-1"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="B"
                                  data-test-id="answer-choice-B"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice B:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "False",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot with overlay and selected true 1`] = `
.c6 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c6 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c6 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c8 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
  border-top: 1px solid #d5d5d5;
}

.c5 .exercise-context .os-title {
  margin: 0 0 var(--spacing,0.8rem);
}

.c5 .exercise-context .os-subtitle {
  margin: var(--spacing,0.8rem) 0;
}

.c5 .exercise-context figure {
  float: left;
  margin: 0;
}

.c5 .exercise-context img {
  max-width: 16rem;
}

.c5 .exercise-context p:last-child {
  margin-bottom: 0;
}

.c5 .question-info,
.c5 .exercise-context {
  line-height: 2rem;
}

.c7 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
}

.c7.exercise-stimulus {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  --step-card-gutter: 14rem;
  --step-card-gutter-top: 4.8rem;
  --step-card-gutter-bottom: 2rem;
  --step-card-surface: #fdfdfd;
  font-size: calc(1.8rem * var(--content-text-scale,1));
  line-height: calc(2.8rem * var(--content-text-scale,1));
  color: #424242;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0 auto 5rem auto;
  border: 0.1rem solid #d5d5d5;
  border-radius: 0.25rem;
  background-color: white;
  overflow: hidden;
}

.c1.c1 {
  --spacing: 0.8rem;
  --step-card-gutter: var(--spacing);
  --step-card-gutter-top: var(--spacing);
  --step-card-gutter-bottom: var(--spacing);
  --step-card-surface: #ffffff;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c0 {
  padding: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.6rem 2.4rem;
  background: #daf3f8;
  font-size: 1.8rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.72px;
  -moz-letter-spacing: -0.72px;
  -ms-letter-spacing: -0.72px;
  letter-spacing: -0.72px;
}

.c3 h2.question-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-size: inherit;
  margin: inherit;
  text-transform: uppercase;
}

.c3 h2.question-info .question-id {
  font-weight: normal;
}

.c3 h2.question-info .ox-icon-lock {
  margin-right: 1rem;
}

.c3 .num-questions,
.c3 .points {
  display: none;
}

.c3 .exercise-id,
.c3 .separator {
  font-weight: normal;
}

.c3 .separator {
  margin: 0 0.4rem;
}

.c3 .exercise-id {
  height: 28px;
}

.c3 button {
  color: #5e5e5e;
}

.c3 .scoring {
  margin-left: auto;
  margin-right: 1rem;
}

.c3 .scoring span {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.c3 .openstax-exercise-badges {
  margin: 0;
  line-height: 2rem;
}

.c3 .openstax-exercise-badges svg {
  display: block;
}

.c3 .openstax-exercise-badges svg:not(.interactive) {
  margin: 0 0 0 6px !important;
}

.c3.c3 {
  background-color: #ffffff;
  padding: var(--spacing,0.8rem);
  font-size: 1.6rem;
  line-height: 2rem;
}

.c3 h2.question-info {
  font-weight: bold;
  font-size: 1.2rem;
  line-height: 2rem;
}

.c3 .question-id {
  font-weight: 400;
  font-size: 1.2rem;
}

.c4.c4.c4 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

.c11 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c10 {
  width: 100%;
}

.c9.openstax-question img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.c9.openstax-question .question-stem {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table {
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
}

.c9.openstax-question .instructions {
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 10px;
  color: #818181;
  margin: 0;
}

.c9.openstax-question .instructions i {
  margin-left: 5px;
}

.c9.openstax-question .instructions .text-info {
  color: #0dc0dc;
  padding-left: 5px;
  cursor: pointer;
  font-style: normal;
}

.c9.openstax-question .multiple-choice-prompt {
  font-weight: 600;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer {
  width: initial;
  color: #424242;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer.answer-selected {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-label {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-letter-wrapper::before {
  width: 3.6rem;
  height: 3.6rem;
  min-width: 3.6rem;
  min-height: 3.6rem;
  border-radius: calc(3.6rem / 2);
  border-width: 2px;
  border-style: solid;
  border-color: #c6c6c6;
  color: #6f6f6f;
  -webkit-transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  background-color: #ffffff;
  font-family: "Neue Helvetica W01",Helvetica,Arial,sans-serif;
  box-sizing: border-box;
  font-weight: normal;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 1rem;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer * {
  margin: 0;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-letter-wrapper::before {
  content: attr(data-answer-choice);
  text-align: center;
  padding: 0;
  font-size: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0 0;
  margin: 0;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label {
  cursor: pointer;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover .answer-letter-wrapper::before {
  color: #026AA1;
  border-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:focus-visible + .answer-label .answer-letter-wrapper::before {
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  outline-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected:not(.answer-correct) .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected.answer-correct .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #0D7741;
  background-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-correct:not(.answer-selected) .answer-label .answer-letter-wrapper::before {
  color: #0D7741;
  border-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label:hover .answer-letter-wrapper::before {
  color: #C22032;
  border-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect.answer-selected.answer-incorrect .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback {
  font-family: "Neue Helvetica W01",Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-style: normal;
  font-weight: 400;
  line-height: 1.6;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  z-index: 1;
  position: relative;
  border: 1px solid rgba(0,0,0,0.2);
  background-color: #ffffff;
  background-clip: padding-box;
  max-width: 325px;
  margin: calc(8px - 14px) 0 1rem 8px;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  color: #6f6f6f;
  font-size: calc(1.4rem * var(--content-text-scale,1));
  max-width: 370px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow {
  position: absolute;
  display: block;
  width: 16px;
  height: 8px;
  margin-left: 9px;
  top: calc(8px * -1);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before,
.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
  border-width: 0 calc(16px / 2) 8px calc(16px / 2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before {
  top: 0;
  border-bottom-color: rgba(0,0,0,0.2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  top: 1px;
  border-bottom-color: #ffffff;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right {
  right: calc(-9px - 1px);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right .arrow {
  right: 9px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback > .content {
  padding: 1rem 0.8rem;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .question-feedback-content {
  padding: 0.9rem 1.1rem;
}

.c9.openstax-question .openstax-answer {
  border-top: 1px solid #d5d5d5;
  margin: 10px 0;
  padding: 6px 8px;
}

.c9.openstax-question .answers-table > :last-child,
.c9.openstax-question .answers-table > :last-child > .question-feedback,
.c9.openstax-question .answers-table > .openstax-answer:has(+ .question-feedback-live-region:last-child:empty) {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table + * {
  margin-top: 20px;
}

.c9.c9.c9.openstax-question .answers-table + * {
  margin-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .question-stem {
  color: #424242;
  font-weight: bold;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback-content {
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback {
  max-width: unset;
}

.c9.c9.c9.openstax-question .openstax-answer {
  padding: 0;
  border: none;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-label {
  padding-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper .answer-answer {
  margin-left: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper::before {
  min-width: 2.3rem;
  min-height: 2.3rem;
  width: 2.3rem;
  height: 2.3rem;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter {
  min-width: 2.8rem;
  min-height: 2.8rem;
  width: 2.8rem;
  height: 2.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: 0 auto auto auto !important;
}

.c2 .step-card-footer {
  display: none;
}

.c2 .answer-answer {
  font-weight: normal;
}

.c2.is-selected {
  background-color: #daf3f8;
  border-width: 0.2rem;
}

.c2.is-selected .step-card-footer,
.c2.is-selected .step-card-body,
.c2.is-selected .step-card-header {
  background-color: #daf3f8 !important;
}

.c2.is-selected .step-card-question {
  border-top-width: 0.2rem;
}

@media (max-width:999px) {
  .c1 {
    --step-card-gutter: 24px;
    --step-card-gutter-top: 24px;
  }
}

@media (max-width:600px) {
  .c1 {
    --step-card-gutter: 8px;
    --step-card-gutter-top: calc(8px * 2);
  }
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:1000px) {
  .c3 button.ox-icon-angle-left,
  .c3 button.ox-icon-angle-right {
    display: none;
  }
}

@media (max-width:999px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2.5rem;
  }

  .c3 svg.ox-icon {
    display: inherit;
    margin: 0;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 24px;
  }

  .c3 button.ox-icon-angle-right {
    margin-left: 24px;
  }

  .c3 .openstax-exercise-badges svg {
    display: none;
  }

  .c3 .num-questions,
  .c3 points {
    display: inherit;
  }

  .c3 .exercise-id {
    display: none;
  }

  .c3 button[class^='ox-icon-angle']:hover {
    box-shadow: none;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
    padding: 10px 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c4.c4 .question-feedback {
    margin-left: 0;
  }

  .c4.c4 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (max-width:600px) {
  .c4 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

<div
  className=""
>
  <div
    className="c0 step-card-outer"
    data-task-step-id="0"
  >
    <div
      className="c1 exercise-step c2 preview-card is-selected"
    >
      <div
        onBlur={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        tabIndex={0}
      >
        <div
          className="step-card"
        >
          <div
            className="c3 step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <div
                className="c6 c7 step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="c6 c7 step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="c8 step-card-question step-card-body"
                >
                  <div
                    className="c9 openstax-question"
                    data-question-number={1}
                    data-test-id="question"
                  >
                    <div
                      className="c10"
                    >
                      <div>
                        <div
                          className="answers-table"
                        >
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-0"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-0"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="A"
                                  data-test-id="answer-choice-A"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice A:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "True",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-1"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-1"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="B"
                                  data-test-id="answer-choice-B"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice B:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "False",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExercisePreview using step data matches snapshot without overlay 1`] = `
.c6 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c6 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c6 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c8 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
  border-top: 1px solid #d5d5d5;
}

.c5 .exercise-context .os-title {
  margin: 0 0 var(--spacing,0.8rem);
}

.c5 .exercise-context .os-subtitle {
  margin: var(--spacing,0.8rem) 0;
}

.c5 .exercise-context figure {
  float: left;
  margin: 0;
}

.c5 .exercise-context img {
  max-width: 16rem;
}

.c5 .exercise-context p:last-child {
  margin-bottom: 0;
}

.c5 .question-info,
.c5 .exercise-context {
  line-height: 2rem;
}

.c7 {
  padding: var(--step-card-gutter-top) var(--step-card-gutter) var(--step-card-gutter-bottom);
  background: var(--step-card-surface);
  overflow: auto;
}

.c7.exercise-stimulus {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  --step-card-gutter: 14rem;
  --step-card-gutter-top: 4.8rem;
  --step-card-gutter-bottom: 2rem;
  --step-card-surface: #fdfdfd;
  font-size: calc(1.8rem * var(--content-text-scale,1));
  line-height: calc(2.8rem * var(--content-text-scale,1));
  color: #424242;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0 auto 5rem auto;
  border: 0.1rem solid #d5d5d5;
  border-radius: 0.25rem;
  background-color: white;
  overflow: hidden;
}

.c1.c1 {
  --spacing: 0.8rem;
  --step-card-gutter: var(--spacing);
  --step-card-gutter-top: var(--spacing);
  --step-card-gutter-bottom: var(--spacing);
  --step-card-surface: #ffffff;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c0 {
  padding: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.6rem 2.4rem;
  background: #daf3f8;
  font-size: 1.8rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.72px;
  -moz-letter-spacing: -0.72px;
  -ms-letter-spacing: -0.72px;
  letter-spacing: -0.72px;
}

.c3 h2.question-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-size: inherit;
  margin: inherit;
  text-transform: uppercase;
}

.c3 h2.question-info .question-id {
  font-weight: normal;
}

.c3 h2.question-info .ox-icon-lock {
  margin-right: 1rem;
}

.c3 .num-questions,
.c3 .points {
  display: none;
}

.c3 .exercise-id,
.c3 .separator {
  font-weight: normal;
}

.c3 .separator {
  margin: 0 0.4rem;
}

.c3 .exercise-id {
  height: 28px;
}

.c3 button {
  color: #5e5e5e;
}

.c3 .scoring {
  margin-left: auto;
  margin-right: 1rem;
}

.c3 .scoring span {
  font-size: 1.2rem;
  font-weight: bold;
  text-transform: uppercase;
}

.c3 .openstax-exercise-badges {
  margin: 0;
  line-height: 2rem;
}

.c3 .openstax-exercise-badges svg {
  display: block;
}

.c3 .openstax-exercise-badges svg:not(.interactive) {
  margin: 0 0 0 6px !important;
}

.c3.c3 {
  background-color: #ffffff;
  padding: var(--spacing,0.8rem);
  font-size: 1.6rem;
  line-height: 2rem;
}

.c3 h2.question-info {
  font-weight: bold;
  font-size: 1.2rem;
  line-height: 2rem;
}

.c3 .question-id {
  font-weight: 400;
  font-size: 1.2rem;
}

.c4.c4.c4 .openstax-has-html .splash .frame-wrapper {
  margin-top: 0;
}

.c11 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c12 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c10 {
  width: 100%;
}

.c9.openstax-question img {
  display: block;
  margin: auto;
  max-width: 100%;
}

.c9.openstax-question .question-stem {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table {
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
}

.c9.openstax-question .instructions {
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 10px;
  color: #818181;
  margin: 0;
}

.c9.openstax-question .instructions i {
  margin-left: 5px;
}

.c9.openstax-question .instructions .text-info {
  color: #0dc0dc;
  padding-left: 5px;
  cursor: pointer;
  font-style: normal;
}

.c9.openstax-question .multiple-choice-prompt {
  font-weight: 600;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer {
  width: initial;
  color: #424242;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer.answer-selected {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-label {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9.openstax-question:not(.openstax-question-preview) .answers-answer .answer-letter-wrapper::before {
  width: 3.6rem;
  height: 3.6rem;
  min-width: 3.6rem;
  min-height: 3.6rem;
  border-radius: calc(3.6rem / 2);
  border-width: 2px;
  border-style: solid;
  border-color: #c6c6c6;
  color: #6f6f6f;
  -webkit-transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out,border-color 0.1s ease-in-out,background-color 0.1s ease-in-out;
  background-color: #ffffff;
  font-family: "Neue Helvetica W01",Helvetica,Arial,sans-serif;
  box-sizing: border-box;
  font-weight: normal;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 1rem;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-answer * {
  margin: 0;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-letter-wrapper::before {
  content: attr(data-answer-choice);
  text-align: center;
  padding: 0;
  font-size: 1.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0 0;
  margin: 0;
  -webkit-transition: color 0.1s ease-in-out;
  transition: color 0.1s ease-in-out;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label {
  cursor: pointer;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover {
  font-weight: bold;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box:not([disabled]) ~ .answer-label:hover .answer-letter-wrapper::before {
  color: #026AA1;
  border-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview) .answer-input-box {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:checked + .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-input-box:focus-visible + .answer-label .answer-letter-wrapper::before {
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
  outline-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview):not(.has-correct-answer) .answer-selected .answer-label:hover .answer-letter-wrapper::before {
  color: #fff;
  border-color: #026AA1;
  background-color: #026AA1;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected:not(.answer-correct) .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-selected.answer-correct .answer-label .answer-letter-wrapper::before {
  color: #fff;
  border-color: #0D7741;
  background-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-correct-answer .answer-correct:not(.answer-selected) .answer-label .answer-letter-wrapper::before {
  color: #0D7741;
  border-color: #0D7741;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label .answer-letter-wrapper::before,
.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect .answer-label:hover .answer-letter-wrapper::before {
  color: #C22032;
  border-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview).has-incorrect-answer .answer-incorrect.answer-selected.answer-incorrect .answer-letter-wrapper::before {
  color: #fff;
  border-color: #C22032;
  background-color: #C22032;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback {
  font-family: "Neue Helvetica W01",Helvetica,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-style: normal;
  font-weight: 400;
  line-height: 1.6;
  text-align: left;
  text-align: start;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  z-index: 1;
  position: relative;
  border: 1px solid rgba(0,0,0,0.2);
  background-color: #ffffff;
  background-clip: padding-box;
  max-width: 325px;
  margin: calc(8px - 14px) 0 1rem 8px;
  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
  color: #6f6f6f;
  font-size: calc(1.4rem * var(--content-text-scale,1));
  max-width: 370px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow {
  position: absolute;
  display: block;
  width: 16px;
  height: 8px;
  margin-left: 9px;
  top: calc(8px * -1);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before,
.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  position: absolute;
  display: block;
  content: "";
  border-color: transparent;
  border-style: solid;
  border-width: 0 calc(16px / 2) 8px calc(16px / 2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::before {
  top: 0;
  border-bottom-color: rgba(0,0,0,0.2);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .arrow::after {
  top: 1px;
  border-bottom-color: #ffffff;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right {
  right: calc(-9px - 1px);
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback.right .arrow {
  right: 9px;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback > .content {
  padding: 1rem 0.8rem;
}

.c9.openstax-question:not(.openstax-question-preview) .question-feedback .question-feedback-content {
  padding: 0.9rem 1.1rem;
}

.c9.openstax-question .openstax-answer {
  border-top: 1px solid #d5d5d5;
  margin: 10px 0;
  padding: 6px 8px;
}

.c9.openstax-question .answers-table > :last-child,
.c9.openstax-question .answers-table > :last-child > .question-feedback,
.c9.openstax-question .answers-table > .openstax-answer:has(+ .question-feedback-live-region:last-child:empty) {
  margin-bottom: 0;
}

.c9.openstax-question .answers-table + * {
  margin-top: 20px;
}

.c9.c9.c9.openstax-question .answers-table + * {
  margin-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .question-stem {
  color: #424242;
  font-weight: bold;
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback-content {
  font-size: 1.6rem;
  line-height: 2rem;
}

.c9.c9.c9.openstax-question .question-feedback {
  max-width: unset;
}

.c9.c9.c9.openstax-question .openstax-answer {
  padding: 0;
  border: none;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-label {
  padding-top: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper .answer-answer {
  margin-left: var(--spacing,0.8rem);
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter-wrapper::before {
  min-width: 2.3rem;
  min-height: 2.3rem;
  width: 2.3rem;
  height: 2.3rem;
}

.c9.c9.c9.openstax-question .openstax-answer .answer-letter {
  min-width: 2.8rem;
  min-height: 2.8rem;
  width: 2.8rem;
  height: 2.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 .detailed-solution .header {
  display: inline;
  margin-right: 0.5rem;
  color: #5e6062;
  font-weight: bold;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
}

.c14 .detailed-solution .solution {
  display: inline;
  color: #6f6f6f;
}

.c13 {
  padding: 0 var(--step-card-gutter) var(--step-card-gutter-bottom);
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale,1));
  line-height: calc(2rem * var(--content-text-scale,1));
  background: #fdfdfd;
  overflow: auto;
}

.c13 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c13 button {
  width: 160px;
  height: 48px;
}

.c13 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c13 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c13 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c13 .controls button:has(~ button),
.c13 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

.c13.c13 {
  padding: 0 var(--step-card-gutter) var(--step-card-gutter-bottom);
}

.c13 .step-card-footer-inner {
  padding-top: var(--spacing,0.8rem);
}

.c2 {
  margin: 0 auto auto auto !important;
}

.c2 .step-card-footer {
  display: none;
}

.c2 .answer-answer {
  font-weight: normal;
}

.c2.is-selected {
  background-color: #daf3f8;
  border-width: 0.2rem;
}

.c2.is-selected .step-card-footer,
.c2.is-selected .step-card-body,
.c2.is-selected .step-card-header {
  background-color: #daf3f8 !important;
}

.c2.is-selected .step-card-question {
  border-top-width: 0.2rem;
}

@media (max-width:999px) {
  .c1 {
    --step-card-gutter: 24px;
    --step-card-gutter-top: 24px;
  }
}

@media (max-width:600px) {
  .c1 {
    --step-card-gutter: 8px;
    --step-card-gutter-top: calc(8px * 2);
  }
}

@media (min-width:1000px) {
  .c1 {
    max-width: 1000px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

@media (min-width:1000px) {
  .c3 button.ox-icon-angle-left,
  .c3 button.ox-icon-angle-right {
    display: none;
  }
}

@media (max-width:999px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2.5rem;
  }

  .c3 svg.ox-icon {
    display: inherit;
    margin: 0;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 24px;
  }

  .c3 button.ox-icon-angle-right {
    margin-left: 24px;
  }

  .c3 .openstax-exercise-badges svg {
    display: none;
  }

  .c3 .num-questions,
  .c3 points {
    display: inherit;
  }

  .c3 .exercise-id {
    display: none;
  }

  .c3 button[class^='ox-icon-angle']:hover {
    box-shadow: none;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
    line-height: 2rem;
    padding: 10px 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }

  .c3 button.ox-icon-angle-left {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c4.c4 .question-feedback {
    margin-left: 0;
  }

  .c4.c4 .question-feedback .arrow {
    margin-left: 12px;
  }
}

@media (max-width:600px) {
  .c4 .openstax-exercise-badges svg {
    margin-right: 8px;
  }
}

@media (max-width:600px) {
  .c13 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c13 {
    padding: 0 var(--step-card-gutter) 32px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c13 .points {
    max-width: 400px;
  }
}

<div
  className=""
>
  <div
    className="c0 step-card-outer"
    data-task-step-id="0"
  >
    <div
      className="c1 exercise-step c2 preview-card "
    >
      <div>
        <div
          className="step-card"
        >
          <div
            className="c3 step-card-header"
          >
            <div>
              <h2
                className="question-info"
              >
                <span>
                  Question 1
                </span>
                <span
                  className="separator"
                >
                  |
                </span>
                <span
                  className="question-id"
                >
                  ID: 
                  1@1
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <div
                className="c6 c7 step-card-body exercise-context"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Context",
                  }
                }
              />
              <div
                className="c6 c7 step-card-body exercise-stimulus"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<b>Stimulus HTML</b>",
                  }
                }
              />
              <div
                data-test-id="student-exercise-question"
              >
                <div
                  className="c8 step-card-question step-card-body"
                >
                  <div
                    className="c9 openstax-question has-correct-answer"
                    data-question-number={1}
                    data-test-id="question"
                  >
                    <div
                      className="c10"
                    >
                      <div>
                        <div
                          className="answers-table"
                        >
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled answer-correct"
                            >
                              <input
                                aria-details="feedback-1234@5-0"
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-0"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-0"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="A"
                                  data-test-id="answer-choice-A"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice A:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "True",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          >
                            <aside
                              className="question-feedback bottom"
                              id="feedback-1234@5-0"
                            >
                              <div
                                aria-hidden="true"
                                className="arrow"
                              />
                              <span
                                className="c12"
                              >
                                Answer feedback:
                              </span>
                              <aside>
                                <div
                                  className="c6 question-feedback-content has-html"
                                  dangerouslySetInnerHTML={
                                    Object {
                                      "__html": "Feedback",
                                    }
                                  }
                                />
                              </aside>
                            </aside>
                          </div>
                          <div
                            className="openstax-answer"
                          >
                            <div
                              className="answers-answer disabled"
                            >
                              <input
                                checked={false}
                                className="answer-input-box"
                                disabled={true}
                                id="1234@5-option-1"
                                name="1234@5-options"
                                onChange={[Function]}
                                type="radio"
                              />
                              <label
                                className="answer-label"
                                htmlFor="1234@5-option-1"
                              >
                                <span
                                  aria-hidden="true"
                                  className="answer-letter-wrapper"
                                  data-answer-choice="B"
                                  data-test-id="answer-choice-B"
                                />
                                <span
                                  className="c11 answer-choice-label"
                                >
                                  Choice B:
                                </span>
                                <div
                                  className="answer-answer"
                                >
                                  <span
                                    className="c6 answer-content"
                                    dangerouslySetInnerHTML={
                                      Object {
                                        "__html": "False",
                                      }
                                    }
                                  />
                                </div>
                              </label>
                            </div>
                          </div>
                          <div
                            aria-atomic="true"
                            aria-live="polite"
                            className="question-feedback-live-region"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c13 step-card-footer"
                >
                  <div
                    className="step-card-footer-inner"
                  >
                    <div
                      className="points"
                    >
                      <div
                        className="c14"
                        role="status"
                      >
                        <div
                          className="detailed-solution"
                        >
                          <div
                            className="header"
                          >
                            Detailed solution:
                          </div>
                          <div
                            className="c6 solution"
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span data-math='e^{\\\\text{Blue}}'></span>",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
